Update to Spark 3.0.0 and Java 11.